--- a/frontend/src/AssessmentPage/StudentCard.css
+++ b/frontend/src/AssessmentPage/StudentCard.css
@@ -1,7 +1,8 @@
 .studentCard{
-    background-color: red;
+    background-color: lightblue;
     border: royalblue;
     border-width: 500px;
     text-align: center;
     max-width: 400px;
+    justify-content: space-evenly;
 }
